# course-management-platform

./: .dockerignore  .env_template  .envrc_template  .gitignore  .prod-versions  .vscode_env  AGENTS.md  CLAUDE.md  Dockerfile  EMAIL_SETUP.md  Makefile  Pipfile  README.md  SOCIAL_LOGIN_MODAL.md  add_data.py  add_more_test_data.py  add_user.py  docker-compose.datamailer-capture.yml  docker-compose.yml  docker-entrypoint.sh  endpoints.md  entrypoint.sh  manage.py  pyproject.toml  tailwind.config.js  tunnel-dev.sh  tunnel-prod.sh
.claude/: settings.local.json
.verdent/: project_rules.md
accounts/: admin.py  apps.py  auth.py  forms.py  models.py  signals.py  tests.py  tests_account_settings.py  tests_account_settings_base.py  tests_account_timezone.py  tests_auth.py  tests_base.py  tests_email_preferences.py  tests_enrollment_profile.py  tests_timezone.py  tests_toggles.py  tests_token_admin.py  urls.py  views.py
api/: crud.py  openapi.py  openapi_content_paths.py  openapi_content_schemas.py  openapi_course_paths.py  openapi_course_schemas.py  openapi_data_paths.py  openapi_integration_schemas.py  openapi_paths.py  openapi_primitives.py  openapi_schemas.py  safety.py  urls.py  utils.py
cadmin/: apps.py  datamailer_views.py  enrollment_views.py  forms.py  services.py  tests.py  urls.py  view_models.py  views.py
course_management/: asgi.py  auth.py  context_processors.py  datamailer.py  datamailer_outbox.py  datamailer_outbox_dispatch.py  datamailer_outbox_retry.py  datamailer_outbox_runs.py  datamailer_outbox_senders.py  datamailer_outbox_status.py  deadlines.py  (+6 more)
(+878 files in other folders)
